# boostmydeal

./: .env.docker.example  .gitignore  docker-compose.yml
credentials/: gcs-credentials.json
dashboard/: .dockerignore  .replit  Dockerfile  README.md  ecosyste.config.js  ecosystem.config.cjs  package-lock.json  package.json  replit.md  test  webhook-example.md
landing-page/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
livekitserver/: .dockerignore  .env.example  .gitignore  .replit  CALL_TRANSFER.md  COST_TRACKING.md  Dockerfile  LANGUAGE_SUPPORT.md  STT_PROVIDERS.md  TTS_PROVIDERS.md  agent_worker.py  create_sip_trunk.py  create_voxsun_trunk.py  example_cost_breakdown.json  main.py  pyproject.toml  replit.md  requirements.txt  test_smallest_ai_call.json  test_voxsun_call.py  test_voxsun_sip_auth.py
orchestrates/: .dockerignore  .gitignore  .replit  AUTO_HANGUP_ON_DISINTEREST.md  Dockerfile  KEYBOARD_TYPING_AUDIO.md  LANGUAGE_CONFIG_IMPLEMENTATION.md  config_cache.py  credential_validator.py  custom_vocode_wrappers.py  error_handlers.py  language_config_wrapper.py  main.py  memory_config.py  package-lock.json  package.json  pyproject.toml  recording_uploader.py  replit.md  requirements.txt  simple_webhooks.py  ssml_agent_wrapper.py  twilio_cost_fetcher.py  unified_cost_tracker.py  vocode_usage_hook.py
orchestrates/templates/: index.html
pie-speech/: .replit  README.md  ecosystem.config.js  ecosystem.config.pie-speech.cjs  package-lock.json  package.json  replit.md  webhook-integration-examples.json
(+349 files in other folders)
